--- a/src/app/(payload)/custom.scss
+++ b/src/app/(payload)/custom.scss
@@ -33,8 +33,8 @@ html.payload-login-page form {
   &::before {
     content: '';
     display: block;
-    width: 100px;
-    height: 50px;
+    width: 140px;
+    height: 70px;
     margin: 0 auto 2rem auto;
     background-image: url('/images/brand/logo.png');
     background-size: contain;
@@ -50,15 +50,21 @@ html.payload-login-page form {
     border: 1px solid #e5e7eb !important;
     border-radius: 0.75rem !important;
     background-color: #f9fafb !important;
+    color: #1f2937 !important;
     font-size: 1rem !important;
     transition: all 0.2s !important;
     box-sizing: border-box !important;
+    
+    &::placeholder {
+      color: #9ca3af !important;
+    }
     
     &:focus {
       outline: none !important;
       border-color: #5CB85C !important;
       box-shadow: 0 0 0 3px rgba(92, 184, 92, 0.1) !important;
       background-color: white !important;
+      color: #1f2937 !important;
     }
   }
   
